Mobile performance updates

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#products">Products</a>
-      <a href="#indiamart">Indiamart</a>
+      <a href="#store">Indiamart</a>
       <a href="#videos">Videos</a>
       <a href="#contact">Contact</a>
       <a href="https://wa.me/917888773023?text=Hello!" class="cta-btn">Get Quote</a>
@@ -53,7 +53,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#products">Products</a>
-        <a href="#indiamart">Indiamart</a>
+        <a href="#store">Indiamart</a>
         <a href="#videos">Videos</a>
         <a href="#contact">Contact</a>
       </div>
@@ -63,7 +63,7 @@
         <a href="#home" class="logo">
           <img src="./images/logo.png" alt="Tillmate Multitech Logo" />
         </a>
-        <div class="menu-toggle" id="menuToggle" aria-label="Toggle navigation">
+        <div class="menu-toggle" id="menuToggle" role="button" tabindex="0" aria-label="Toggle navigation">
           <span></span>
           <span></span>
           <span></span>
@@ -77,12 +77,12 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="hero-slide">
-                <img src="./images/slide-1.webp" alt="Machine" />
+                <img src="./images/slide-1.webp" alt="Agricultural Machine" />
                 <div class="hero-content">
                   <span>Premium Agricultural Solutions</span>
                   <h1>Your Trusted Partner</h1>
                   <p>Quality machinery and exceptional service tailored for progressive farmers.</p>
-                  <a class="primary-btn" href="#indiamart">Explore Our Products</a>
+                  <a class="primary-btn" href="#store">Explore Our Products</a>
                 </div>
               </div>
             </div>
@@ -196,7 +196,7 @@
         </div>
       </section>
 
-      <section class="indiamart-section" id="indiamart">
+      <section class="indiamart-section" id="store">
         <div class="container">
           <div class="label">🚚 Timely Delivery, Every Time</div>
           <h2 class="section-heading">Our Products on Indiamart</h2>
