Sitemap and indexing updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tillmate Multitech</title>
+    <title>Tillmate Multitech | Agricultural Machinery Manufacturer</title>
     <meta name="description" content="Tillmate Multitech is a trusted manufacturer and supplier of Tractor Rotavators, Seed Drills, and Power Weeders in Punjab, India. Known for high-quality, durable, and affordable farming equipment since 2022." />
     <meta name="keywords" content="Tillmate Multitech, tractor rotavator manufacturer Punjab, seed drill supplier India, power weeder manufacturer, agricultural machinery Phagwara, farm equipment Punjab, rotavator price India, best farming tools Punjab, agriculture implements manufacturer India" />
     <meta name="author" content="Tillmate Multitech" />
