Updated map co-ordinates

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="robots" content="index, follow" />
     <meta name="geo.region" content="IN-PB" />
     <meta name="geo.placename" content="Ludhiana, Punjab, India" />
-    <meta name="geo.position" content="30.9010;75.8573" />
-    <meta name="ICBM" content="30.9010, 75.8573" />
+    <meta name="geo.position" content="30.85996000;75.92030000" />
+    <meta name="ICBM" content="30.85996000, 75.92030000" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
